# libmsvg

./: .gitignore  CMakeLists.txt
expat/: CMakeLists.txt
src/: msvg.h  util.h
